force-app/main/default/objects/Vehicle_Repair_Service_Package_Item__c/Vehicle_Repair_Service_Package_Item__c.object-meta.xml
<CustomObject>
    <description>This object will show service package items purchased by the customer is used on which repair quotes line items and job order line items.</description>
    <label>Vehicle Repair Service Package Item</label>
    <nameField>
        <displayFormat>VRSPI-{0000}</displayFormat>
        <label>Vehicle Repair Service Package Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Repair Service Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>