force-app/main/default/objects/Vehicle_Repair_Service_Package_Item__c/fields/Job_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Vehicle Repair Service Package Items</relationshipLabel>
    <relationshipName>Vehicle_Repair_Service_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>