force-app/main/default/objects/Vehicle_Repair_Service_Package_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>Repair_Quote_Line_Item__r.Quantity__c</formula>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>