force-app/main/default/objects/Vehicle_Repair_Service_Package_Item__c/fields/Repair_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Repair_Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Quote Line Item</label>
    <referenceTo>Repair_Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Vehicle Repair Service Package Items</relationshipLabel>
    <relationshipName>Vehicle_Repair_Service_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>