force-app/main/default/objects/Vehicle_Repair_Service_Package_Item__c/fields/Vehicle_Repair_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Repair_Service_Package__c</fullName>
    <label>Vehicle Repair Service Package</label>
    <referenceTo>Vehicle_Repair_Service_Package__c</referenceTo>
    <relationshipLabel>Vehicle Repair Service Package Items</relationshipLabel>
    <relationshipName>Vehicle_Repair_Service_Package_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>