force-app/main/default/objects/Vehicle_Repair_Service_Package_Item__c/fields/Vehicle_Service_Package_Item__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Service_Package_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Service Package Item</label>
    <referenceTo>Vehicle_Service_Package_Item__c</referenceTo>
    <relationshipLabel>Vehicle Repair Service Package Items</relationshipLabel>
    <relationshipName>Vehicle_Repair_Service_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>